# LinearsystemSimulation

./: .gitignore  CMakeLists.txt  README.md
src/: Config.cpp  Config.h  Gui.cpp  Gui.h  Kinematics.cpp  Kinematics.h  main.cpp
